# plex-letterboxd-sync

./: .dockerignore  .env-sample  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
api/: plex.py
model/: film.py
pletterboxd-sync/: syncster.py
pletterboxd-sync/api/: letterboxd.py  plex.py
pletterboxd-sync/templates/auth/: login.html
pletterboxd-sync/utils/: constants.py
utils/: helpers.py
