[tool.poetry]
name = "plex-letterboxd-sync"
version = "0.1.0"
description = ""
authors = ["Alex Oladele <Oladelaa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
flask = "*"
loguru = "^0.7.2"
plexapi = "^4.15.7" # https://pypi.org/project/PlexAPI/
python = "^3.11"
python-decouple = "~=3.8"
requests = "~=2.31"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
requests-mock = "*"
responses = "*"
types-requests = "*"
typing-extensions = "*"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
mypy = "*"
ruff = "^0.1.13"

[tool.ruff]
line-length = 120

[tool.ruff.mccabe]
max-complexity = 8

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
